[package]
authors = ["Juan Lledo"]
edition = "2018"
name = "drop-it"
version = "0.2.0"

[package.metadata.winres]
FileDescription = "Drop It"

[build-dependencies]
winres = "0.1.11"

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
enigo = "0.0.14"
env_logger = "0.8.3"
futures = "0.3.13"
log = "0.4.14"
log4rs = "1.0.0"
nom = "6.1.2"
windows-service = "0.3.1"
